@@ -2,6 +2,7 @@
   - bugfix: ASCII colly diz with extended chars was causing an error
   - deprecation: the "extras" subfolder of default script has been
     moved to https://github.com/x84-extras
+  - bugfix: KeyError in hackernews.py
 2.0.5
   - bugfix: UnicodeDecodeError when quoting some messages
   - bugfix: '__uploads__' folder not hidden by sftp as intended
